--- a/app/src/main/res/layout/fragment_easy_cadastro.xml
+++ b/app/src/main/res/layout/fragment_easy_cadastro.xml
@@ -49,6 +49,7 @@
         app:layout_constraintVertical_bias="0.165" />
 
     <RadioGroup
+        android:id="@+id/radioButtonGrade"
         android:layout_width="144dp"
         android:layout_height="149dp"
         app:layout_constraintBottom_toBottomOf="parent"
