--- a/app/src/main/res/layout/fragment_easy_agendamento.xml
+++ b/app/src/main/res/layout/fragment_easy_agendamento.xml
@@ -48,18 +48,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.181" />
 
-    <RadioButton
-        android:id="@+id/radioButtonEasy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.079"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.346" />
 
     <TextView
         android:id="@+id/textView18"
@@ -148,11 +136,11 @@
         app:layout_constraintVertical_bias="0.475" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonEasyConcluido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/mediumBlue"
-        android:text="Button"
+        android:text="Concluído"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.485"
@@ -202,6 +190,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.363" />
+
+    <TextView
+        android:id="@+id/textRadioButton"
+        android:layout_width="6dp"
+        android:layout_height="20dp"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.362" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
